--- a/Netflix-Clone-main/index.html
+++ b/Netflix-Clone-main/index.html
@@ -359,12 +359,12 @@
             class="language__drop__down"
           >
             <option value="english" selected>English</option>
-            <option value="hindi">हिन्दी</option>
+            <option value="URDU"></option>
           </select>
         </div>
       </div>
       <div class="footer__row__4">
-        <p>Netflix India</p>
+        <p>Netflix PAKISTAN</p>
       </div>
     </footer>
 
